--- a/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
@@ -23,10 +23,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="Default.aspx">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link" href="GridArticulos.aspx">Listado</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown
@@ -52,11 +52,9 @@
                 </div>
             </nav>
 
-            <a href="Pagina1.aspx">Ir a la pagina 1</a>
-
             <div class="container">
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
             </div>
             <footer>Footer</footer>
         </div>
