boton eliminar terminado

--- a/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="Default.aspx">Home</a>
-                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -57,18 +57,21 @@
                 </asp:ContentPlaceHolder>
             </div>
             <footer style="background-color: #f8f9fa; padding: 20px; text-align: center; font-size: 14px; color: #6c757d;">
-    <div>
-        <p>&copy; 2024 TuEcommerce. Todos los derechos reservados.</p>
-        <p><a href="/about-us" style="color: #007bff; text-decoration: none;">Sobre Nosotros</a> | 
+                <div>
+                    <p>&copy; 2024 TuEcommerce. Todos los derechos reservados.</p>
+                    <p>
+                        <a href="/about-us" style="color: #007bff; text-decoration: none;">Sobre Nosotros</a> | 
            <a href="/contact" style="color: #007bff; text-decoration: none;">Contacto</a> | 
-           <a href="/privacy-policy" style="color: #007bff; text-decoration: none;">Política de Privacidad</a></p>
-        <p>Síguenos en 
+           <a href="/privacy-policy" style="color: #007bff; text-decoration: none;">Política de Privacidad</a>
+                    </p>
+                    <p>
+                        Síguenos en 
             <a href="https://facebook.com/tu-ecommerce" style="color: #007bff; text-decoration: none;">Facebook</a>, 
             <a href="https://twitter.com/tu-ecommerce" style="color: #007bff; text-decoration: none;">Twitter</a>, 
             <a href="https://instagram.com/tu-ecommerce" style="color: #007bff; text-decoration: none;">Instagram</a>
-        </p>
-    </div>
-</footer>
+                    </p>
+                </div>
+            </footer>
 
         </div>
     </form>
