login casi terminado

--- a/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
@@ -38,11 +38,20 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                            <% if (Session["usuario"] != null && ((dominio.Dom_Usuario)Session["usuario"]).TipoUsuario == dominio.TipoUsuario.ADMIN)
+                                { %>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="GridArticulos.aspx">Listado</a>
                             </li>
+                            <% } %>
+
+
                             <li class="nav-item">
                                 <a class="nav-link" href="">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Login.aspx">Login</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown
