--- a/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
@@ -30,7 +30,7 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="Default.aspx">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,9 +50,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="">Nosotros</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="Login.aspx">Login</a>
-                            </li>
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown
                                 </a>
@@ -68,11 +66,15 @@
                             <li class="nav-item">
                                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                             </li>
+
+
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
+
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="Login.aspx">Login</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
