--- a/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
@@ -91,12 +91,14 @@
                                 <a class="nav-link" href="Login.aspx">Login</a>
                             </li>
                             <% }
-                            else
-                            { %>
+                                else
+                                { %>
                             <li class="nav-item">
                                 <asp:Button ID="botonSalir" runat="server" Text="Salir" OnClick="botonSalir_Click" CssClass="nav-link" />
                             </li>
                             <% } %>
+                                    
+                        <asp:Image              
                         </ul>
                     </div>
                 </div>
