--- a/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
@@ -79,7 +79,7 @@
                                 <a class="nav-link active" href="Nosotros.aspx">Nosotros</a>
                             </li>
                         </ul>
-
+                        
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" href="MiPerfil.aspx">Mi Perfil</a>
@@ -97,9 +97,12 @@
                                 <asp:Button ID="botonSalir" runat="server" Text="Salir" OnClick="botonSalir_Click" CssClass="nav-link" />
                             </li>
                             <% } %>
-                                    
-                        <asp:Image              
+                             <li class="nav-item">
+                                <asp:Image ID="imgAvatar" runat="server" CssClass="nav-link" Style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" />
+
+                            </li>       
                         </ul>
+
                     </div>
                 </div>
             </nav>
