--- a/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/MiMaster.Master
@@ -57,6 +57,7 @@
 </head>
 <body>
     <form id="form1" runat="server">
+
         <div>
             <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
                 <div class="container-fluid">
@@ -79,7 +80,7 @@
                                 <a class="nav-link active" href="Nosotros.aspx">Nosotros</a>
                             </li>
                         </ul>
-                        
+
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" href="MiPerfil.aspx">Mi Perfil</a>
@@ -90,17 +91,19 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="Login.aspx">Login</a>
                             </li>
+
                             <% }
                                 else
                                 { %>
                             <li class="nav-item">
                                 <asp:Button ID="botonSalir" runat="server" Text="Salir" OnClick="botonSalir_Click" CssClass="nav-link" />
                             </li>
-                            <% } %>
-                             <li class="nav-item">
+                            <li class="nav-item d-flex align-items-center">
+                                <asp:Label Text="" ID="lblUser" runat="server" CssClass="me-2" />
                                 <asp:Image ID="imgAvatar" runat="server" CssClass="nav-link" Style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" />
 
-                            </li>       
+                            </li>
+                            <% } %>
                         </ul>
 
                     </div>
